--- a/5. Applications and NATs/5.5. HTTP.md
+++ b/5. Applications and NATs/5.5. HTTP.md
@@ -10,3 +10,8 @@ a document format that allows you to include format and content information in o
 
 * provide Request/Response format
 * document centric
+
+## HTTP 1.0
+
+* open connection
+* GET request
