--- a/5. Applications and NATs/5.9. DNS - 2.md
+++ b/5. Applications and NATs/5.9. DNS - 2.md
@@ -14,6 +14,11 @@ name [TTL] [class] type rdata
 * type: type of the record
 * rdata: resource data depend on type
 
-Two typical RR types: A (IPv4 address) and NS (name server)
+RR types:
+* A (IPv4 address)
+* NS (name server)
+* CNAME (domain name alias)
+* AAAA (IPv6 address)
+* many others
 
 The domain name can appear at the resource record multiple times. To reduce the size of the record, the domain name can be compressed.
